# stm32f446-usb-keyboard

./: Cargo.toml  openocd.gdb
src/: keyboard.rs  main.rs
