[package]
name = "stm32f446-usb-enumeration"
version = "0.1.0"
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
stm32f4xx-hal = { version = "0.8.2", features = ["stm32f446", "rt", "usb_fs"] }
usb-device = "0.2.5"
panic-halt = "0.2.0"
synopsys-usb-otg = { features = ["fs", "stm32f446xx"] }
usbd-serial = "0.1.0"
usbd-hid-device = "0.1.1"
arrayvec = { version = "0.5.1", default-features = false }
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

[patch.crates-io]
synopsys-usb-otg = { path = "../synopsys-usb-otg" }
usbd-hid-device = { path = "../usbd-hid-device" }
stm32f4xx-hal = { path = "../../stm32f4xx-hal" }

[profile.dev]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"
